# PP2

./: .credentials  .cursorrules  .editorconfig  .env.example  .gitignore  ACCOUNT_ACTIVATION_IMPLEMENTATION.md  AUTHSERVICE_URL_FIX_SUMMARY.md  COMPREHENSIVE_PROJECT_BRIEF.md  CURRENT_TASK.md  DASHBOARD_API_INTEGRATION_SUMMARY.md  DASHBOARD_AUDIT_REPORT.md  DATABASE_SCHEMA_VERIFICATION_REPORT.md  IMPLEMENTATION_GUIDE.md  INVITATION_ENDPOINT_FIXES.md  INVITATION_STATISTICS_FIX_SUMMARY.md  INVITATION_SYSTEM_BUG_FIX_SUMMARY.md  INVITATION_SYSTEM_FINAL_SUMMARY.md  INVITATION_SYSTEM_PRODUCTION_READINESS.md  LAYOUT_STANDARDIZATION_COMPLETE.md  LAYOUT_VERIFICATION_FINDINGS.md  LocalBuildChecklist  NAVIGATION_FIXES_SUMMARY.md  NAVIGATION_TEST_SUITE_SUMMARY.md  ONBOARDING_IMPLEMENTATION.md  ORDER_MANAGEMENT_COMPLETION_SUMMARY.md  ORDER_MANAGEMENT_CONSOLE_ERRORS_FIXED.md  PROJECT_CONTEXT.md  README.md  READONLY_COMMUNICATION_IMPLEMENTATION.md  SALES_DASHBOARD_REAL_DATA_INTEGRATION.md  SECURITY_CLEANUP_SUMMARY.md  SECURITY_VERIFICATION_COMPLETE.md  STAFF_MANAGEMENT_UI_COMPLETION.md  URGENT_FIX_COMPLETION_SUMMARY.md  appspec.yaml  check_doctor_id.py  check_facilities.py  check_orgs.py  check_patient_docs_schema.py  check_patients.py  (+27 more)
Healthcare IVR Platform - UI/: UX Design Breif
backend/: .env.example  .env.template  ASYNC_CONVERSION_SUMMARY.md  AUTHENTICATION_RESOLUTION_SUMMARY.md  Dockerfile  Dockerfile.dev  Dockerfile.mock  LOCAL_AUTH_SETUP.md  PRACTICE_API_COMPLETION_REPORT.md  __init__.py  alembic.ini  api_documentation_generator.py  api_documentation_generator.py.backup  check_database_tables.py  check_doctor_user.py  check_existing_data.py  check_facilities.py  check_ivr_data.py  check_organizations.py  check_products.py  check_users.py  coverage.xml  create_admin.py  create_admin_user.py  create_initial_data.py  create_test_facility_provider.py  debug_cors_issue.py  debug_invitation_auth.py  debug_invitation_issue.py  dev.db  healthcare_ivr.db  local_dev_config.env  pyrightconfig.json  pytest.ini  requirements-test.txt  requirements.txt  run-migrations.sh  run_migration.py  setup.py  simple_test.py  (+44 more)
docs/: AUTHENTICATION_FIX_SUMMARY.md  CREDENTIAL_CLEANUP_REPORT.md  CURRENT_TASK.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_SETUP.md  GIT_WORKFLOW.md  HIPAA_COMPLIANCE.md  IMPLEMENTATION_GUIDE.md  (+5 more)
(+1029 files in other folders)
